added recording arm positions

--- a/src/index.html
+++ b/src/index.html
@@ -19,5 +19,13 @@
 <div id='debug'>
 </div>
 
+<button id='record' disabled>
+  record / stop
+</button>
+
+<button id='play' disabled>
+  play
+</button>
+
 </body>
 </html>
