--- a/src/index.html
+++ b/src/index.html
@@ -1,31 +1,102 @@
 <!DOCTYPE html>
 <html lang='en'>
 <head>
-  <meta charset='utf-8'>
-  <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-  <meta name='viewport' content='width=device-width, initial-scale=1'>
-  <meta name='description' content=''>
-  <meta name='author' content=''>
-  <link rel='shortcut icon' href=''>
-  <title>arm.js</title>
-  <!-- <link href='stylesheets/style.css' rel='stylesheet' type='text/css'> -->
-  <script src='arm.js'></script>
-</head>
-<body>
-	hello world!
-	<div id='coords'>
+	<meta charset='utf-8'>
+	<meta http-equiv='X-UA-Compatible' content='IE=edge'>
+	<meta name='viewport' content='width=device-width, initial-scale=1'>
+	<meta name='description' content=''>
+	<meta name='author' content=''>
+	<link rel='shortcut icon' href=''>
+	<title>arm.js</title>
+	<!-- <link href='stylesheets/style.css' rel='stylesheet' type='text/css'> -->
+	<script src='arm.js'></script>
+	<style>
+	button {
+		padding: 1em;
+		border: none;
+		border-radius: 0.25em;
+	}
+	button:disabled {
+		opacity: 0.7;
+	}
+	#record {
+		color: white;
+		background-color: #c0392b;
+	}
+	#spinner {
+		margin: 100px auto;
+		width: 50px;
+		height: 30px;
+		text-align: center;
+		font-size: 10px;
+	}
+	#spinner > div {
+		background-color: #aaa;
+		height: 100%;
+		width: 6px;
+		display: inline-block;
+
+		-webkit-animation: stretchdelay 1.2s infinite ease-in-out;
+		animation: stretchdelay 1.2s infinite ease-in-out;
+	}
+
+	#spinner .rect2 {
+		-webkit-animation-delay: -1.1s;
+		animation-delay: -1.1s;
+	}
+
+	#spinner .rect3 {
+		-webkit-animation-delay: -1.0s;
+		animation-delay: -1.0s;
+	}
+
+	#spinner .rect4 {
+		-webkit-animation-delay: -0.9s;
+		animation-delay: -0.9s;
+	}
+
+	#spinner .rect5 {
+		-webkit-animation-delay: -0.8s;
+		animation-delay: -0.8s;
+	}
+
+	@-webkit-keyframes stretchdelay {
+		0%, 40%, 100% { -webkit-transform: scaleY(0.4) }  
+		20% { -webkit-transform: scaleY(1.0) }
+	}
+
+	@keyframes stretchdelay {
+		0%, 40%, 100% { 
+			transform: scaleY(0.4);
+			-webkit-transform: scaleY(0.4);
+			}  20% { 
+				transform: scaleY(1.0);
+				-webkit-transform: scaleY(1.0);
+			}
+		}
+		</style>
+	</head>
+	<div id='controls'>
+<!-- 		<div id='coords'>
+		</div> -->
+
+		<div id='debug'>
+		</div>
+
+		<button id='record' disabled>
+			record
+		</button>
+
+		<button id='play' disabled>
+			play
+		</button>
 	</div>
-
-<div id='debug'>
-</div>
-
-<button id='record' disabled>
-  record
-</button>
-
-<button id='play' disabled>
-  play
-</button>
-
+	<div id="spinner">
+		<div class="rect1"></div>
+		<div class="rect2"></div>
+		<div class="rect3"></div>
+		<div class="rect4"></div>
+		<div class="rect5"></div>
+	</div>
 </body>
 </html>
