--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 	<link rel='shortcut icon' href=''>
 	<title>arm.js</title>
 	<!-- <link href='stylesheets/style.css' rel='stylesheet' type='text/css'> -->
-	<script src='arm.js'></script>
+	<script src='index.js'></script>
 	<style>
 	button {
 		font-size: 16px;
