--- a/src/public/index.html
+++ b/src/public/index.html
@@ -9,6 +9,7 @@
 	<link rel='shortcut icon' href=''>
 	<title>arm.js</title>
 	<!-- <link href='stylesheets/style.css' rel='stylesheet' type='text/css'> -->
+	<script src="https://js.leapmotion.com/leap-0.6.4.js"></script>
 	<script src='index.js'></script>
 	<style>
 	button {
