--- a/src/public/index.html
+++ b/src/public/index.html
@@ -9,7 +9,8 @@
 	<link rel='shortcut icon' href=''>
 	<title>arm.js</title>
 	<!-- <link href='stylesheets/style.css' rel='stylesheet' type='text/css'> -->
-	<script src="https://js.leapmotion.com/leap-0.6.4.js"></script>
+	<script src='http://code.jquery.com/jquery-1.11.2.js'></script>
+	<script src='http://js.leapmotion.com/leap-0.6.4.js'></script>
 	<script src='index.js'></script>
 	<style>
 	button {
