--- a/src/public/index.html
+++ b/src/public/index.html
@@ -27,88 +27,29 @@
 		color: white;
 		background-color: #c0392b;
 	}
-
-	#spinner {
-		margin: 100px auto;
-		width: 50px;
-		height: 30px;
-		text-align: center;
-		font-size: 10px;
-	}
-	#spinner > div {
-		background-color: #aaa;
-		height: 100%;
-		width: 6px;
+	#controls {
 		display: inline-block;
-
-		-webkit-animation: stretchdelay 1.2s infinite ease-in-out;
-		animation: stretchdelay 1.2s infinite ease-in-out;
 	}
 
-	#spinner .rect2 {
-		-webkit-animation-delay: -1.1s;
-		animation-delay: -1.1s;
-	}
-
-	#spinner .rect3 {
-		-webkit-animation-delay: -1.0s;
-		animation-delay: -1.0s;
-	}
-
-	#spinner .rect4 {
-		-webkit-animation-delay: -0.9s;
-		animation-delay: -0.9s;
-	}
-
-	#spinner .rect5 {
-		-webkit-animation-delay: -0.8s;
-		animation-delay: -0.8s;
-	}
-
-	@-webkit-keyframes stretchdelay {
-		0%, 40%, 100% { -webkit-transform: scaleY(0.4) }
-		20% { -webkit-transform: scaleY(1.0) }
-	}
-
-	@keyframes stretchdelay {
-		0%, 40%, 100% {
-			transform: scaleY(0.4);
-			-webkit-transform: scaleY(0.4);
-			}  20% {
-				transform: scaleY(1.0);
-				-webkit-transform: scaleY(1.0);
-			}
-		}
-		</style>
-	</head>
+	</style>
+</head>
+<body>
 	<div id='controls'>
-		<!--<div id='coords'>
-		</div> -->
-
-		<div id='debug'>
-		</div>
-
-		<button id='record' disabled>
+		<button id='record'>
 			record
 		</button>
 
-		<button id='play' disabled>
+		<button id='play'>
 			play
 		</button>
 
-		<button id='save' disabled>
+		<button id='tracking'>
+			pause tracking
+		</button>
+
+		<!-- <button id='save'>
 			save
-		</button>
-		<button id='delete' disabled>
-			delete
-		</button>
-	</div>
-	<div id="spinner">
-		<div class="rect1"></div>
-		<div class="rect2"></div>
-		<div class="rect3"></div>
-		<div class="rect4"></div>
-		<div class="rect5"></div>
+		</button> -->
 	</div>
 </body>
 </html>
