removed leap js from cdn

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -10,8 +10,10 @@
 	<title>arm.js</title>
 	<!-- <link href='stylesheets/style.css' rel='stylesheet' type='text/css'> -->
 	<script src='http://code.jquery.com/jquery-1.11.2.js'></script>
-	<script src='http://js.leapmotion.com/leap-0.6.4.js'></script>
+	<!-- // <script src='http://js.leapmotion.com/leap-0.6.4.js'></script> -->
+	<script src='leap-0.6.4.js'></script>
 	<script src='index.js'></script>
+
 	<style>
 	button {
 		font-size: 16px;
